# echecs

./: CMakeLists.txt  Doxyfile  Makefile  README.md  neuronal_data.net  uncrustify.cfg  xor_float.net
docs/jeux/: deplacement.md  fichier.md  implementationMinMax.md  jeux.tex  minmax.md  ouverture.md  regles.md  structure.md
src/: deplacement.c  deplacement.h  fichier.c  fichier.h  grille.c  grille.h  hash.c  hash.h  ia.c  ia.h  jeu.c  jeu.h  main.c  option.c  option.h  piece.c  piece.h  structure.h  ui.c  ui.h
src/cef/: cef_app.c  cef_app.h  cef_base.c  cef_base.h  cef_client.c  cef_client.h  cef_gtk.c  cef_gtk.h
src/www/: index.html
src/www/css/: foundation.css  foundation.min.css  main.css
src/www/img/foundation-icons/: foundation-icons.css
src/www/js/: app.js  controllers.js  directives.js  services.js
src/www/lib/: angular-foundation.js  angular-foundation.min.js  dialog.js
src/www/partials/: accueil.html  grille.html  home.html  jeu.html  menu.html
src/www/template/: alertJoueur.html  alertJoueur2.html  alertJoueurRepet1.html  bottom.html  dialogSave.html  header.html  modal.html  nav.html  promotion.html  start.html  top.html
